--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h2>Modo de preparo:</h2>
     <ol>
         <li>Adquira poderes magnéticos.</li>        
-        <li>Esquente uma penela de metal magnético com um campo magnético ocilante</li>
+        <li>Esquente uma penela de metal magnético usando um campo magnético ocilante.</li>
         <li>Seu ovo está pronto!</li>
     </ol>
 </body>
