--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html>''
 
 <head>
     <title> Aula 2023/08/14 CSW
@@ -33,6 +33,34 @@
         <li>Esquente uma penela de metal magnético usando um campo magnético ocilante.</li>
         <li>Seu ovo está pronto!</li>
     </ol>
+
+    <style>
+        table, th, td {
+          border:1px solid;
+        }
+        </style>
+    <table style="width:200px">
+        <tr>
+            <th>Ingrediente</th>
+            <th>Quantidade</th>            
+        </tr>
+        <tr>
+            <td>Ovos</td>
+            <td>2</td>
+        </tr>
+        <tr>
+            <td>Sal</td>
+            <td>1g</td>
+        </tr>
+        <tr>
+            <td>Manteiga</td>
+            <td>5g </td>
+        </tr>
+        <tr>
+            <td colspan="2">colspan test</td>
+        </tr>
+                
+    </table>
 </body>
 
 </html>
