Pagina de adicionar receitas

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<html>''
-
+<html>
+    <h1 style="color:rgb(228, 108, 61)">A Página do Ovo</h1>
+    <a href="novareceita.html">Inserir nova receita</a>
 <head>
     <title> Aula 2023/08/14 CSW
     </title>
