--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <html>
-    <h1 style="color:rgb(228, 108, 61)">A Página do Ovo</h1>
-    <a href="novareceita.html">Inserir nova receita</a>
+    
 <head>
     <title> Aula 2023/08/14 CSW
     </title>
 </head>
 
 <body>
+    <h1 style="color:rgb(228, 108, 61)">A Página do Ovo</h1>
+    <a href="novareceita.html"><img src="https://images.freeimages.com/fic/images/icons/2315/default_icon/128/arrow_right.png?ref=findicons" alt="novareceita" width="50"></a>
+
     <h1>Como fritar um ovo telepaticamente?</h1>
     <img src="https://i.kym-cdn.com/entries/icons/original/000/030/110/xmen.jpg" alt="Professor X fritando ovos"
         width="300">
